nohup.out
[0;36m21 Mar 11:41:12[0m [0;32mlog[0m [0;37mready[0m

/tf2/server/util/socketUtil.js:31
  exports.modules[moduleName] = module);
                                      ^

node.js:116
        throw e; // process.nextTick error, or 'error' event on first tick
        ^
SyntaxError: Unexpected token )
    at Module._compile (module.js:297:25)
    at Object..js (module.js:308:10)
    at Module.load (module.js:234:31)
    at Function._load (module.js:201:10)
    at require (module.js:246:19)
    at generalGameServer.createServer (/tf2/server/server.js:27:20)
    at Object.<anonymous> (/testNPM/server.js:3:41)
    at Module._compile (module.js:302:26)
    at Object..js (module.js:308:10)
    at Module.load (module.js:234:31)
